Fix mobile padding and icon alignment

--- a/src/candidateInfo.css
+++ b/src/candidateInfo.css
@@ -178,7 +178,7 @@
       .back-icon {
         cursor: pointer;
         display: inline-block;
-        padding-right: 24px;
+        padding-right: 22px;
         height: 18px;
         transform: rotate(180deg);
     }
