--- a/src/modal.css
+++ b/src/modal.css
@@ -95,7 +95,6 @@
     min-height: 30vh;
     min-width: 100vw;
     overflow: scroll;
-    padding: .8em;
     padding-top: 0px;
   }
 
